# carbon-footprint-calculator

./: .gitignore  Cargo.toml  README.md  asset-manifest.json  index.html
.github/workflows/: deploy.yml
src/: lib.rs
static/css/: main.ce14848d.css  main.ce14848d.css.map
static/js/: main.83a9ef2a.js  main.83a9ef2a.js.map
static/media/: carbon_footprint_calculator_bg.0c6137ed5f8a35c62ed3.wasm
tests/: web.rs
www/: package-lock.json  package.json
www/public/: index.html
www/src/: App.js
www/src/components/: CarbonFootprintCalculator.js
