[package]
name = "carbon_footprint_calculator"
version = "0.1.0"
author = ["Janpreet Singh <kado@janpreet.com>"]
description = "A Carbon Footprint Calculator implemented in Rust and compiled to WASM"
edition = "2021"
license = "MIT"
repository = "https://github.com/janpreet/carbon-footprint-calculator"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde_json = "1.0"

[features]
default = ["console_error_panic_hook"]
